<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/title_host_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
                android:id="@+id/hostname_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:text="@string/hostname_title" />
        <TextView
                android:id="@+id/hostname_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:text="@string/port_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_host_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/title_host_line">

        <EditText
                android:id="@+id/hostname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/hostname_title"
                android:layout_weight=".70"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:singleLine="true"
                android:hint="@string/hostname_title"
                android:text="" />

        <EditText
                android:id="@+id/port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/hostname_title"
                android:layout_weight=".30"
                android:textSize="16sp"
                android:singleLine="true"
                android:hint="@string/port_title"
                android:text="" />
    </LinearLayout>

    <TextView
            android:id="@+id/servicename_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_host_line"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:text="@string/servicename_title" />
    <EditText
            android:id="@+id/servicename_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/servicename_title"
            android:layout_weight=".30"
            android:textSize="16sp"
            android:singleLine="true"
            android:hint="@string/servicename_title"
            android:text="" />
</RelativeLayout>
